--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,6 +22,10 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## PLACE CHANGELOG diff in here
+            ## 5.13.0 (06/10/2020)
+
+            ### Enhancements:
+
+            - [#341](https://github.com/greenplum-db/pxf/pull/341) Create external-table directory and PXF RPM
           draft: false
           prerelease: false
