--- a/concourse/docker/pxf-build-base/Dockerfile
+++ b/concourse/docker/pxf-build-base/Dockerfile
@@ -25,14 +25,14 @@ RUN export BUILD_PARAMS=-Dorg.gradle.daemon=false && \
     GOPATH=/opt/go PATH=/opt/go/bin:/usr/local/go/bin:$PATH make -C /tmp/pxf_src/cli/go/src/pxf-cli build && \
     make -C /tmp/pxf_src/server test stage && \
     mkdir -p /root/automation_tmp_lib/ &&  \
-    for X in /tmp/pxf_src/server/build/stage/lib/pxf-*-[0-9]*.jar; do \
-      ln -sf $X /root/automation_tmp_lib/`echo \`basename $X\` | sed -e 's/-[a-zA-Z0-9.]*.jar/.jar/'`; \
+    for X in /tmp/pxf_src/server/build/stage/pxf/lib/pxf-*-[0-9]*.jar; do \
+      ln -sf $X /root/automation_tmp_lib/`echo \`basename $X\` | cut -f1,2 -d'-'`.jar; \
     done && touch /root/automation_tmp_lib/pxf-extras.jar && \
     PXF_HOME=/tmp/pxf make -C /tmp/pxf_src/automation dev && \
     mkdir -p /root/pxf/servers/database/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/database/ && \
     mkdir -p /root/pxf/servers/db-session-params/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/db-session-params/ && \
     mkdir -p /root/pxf/servers/db-hive/ && cp /tmp/pxf_src/server/pxf-service/src/templates/user/templates/jdbc-site.xml /root/pxf/servers/db-hive/ && \
-    make -C /tmp/pxf_src/automation TEST=HdfsSmokeTest || true && \
+    GPHD_ROOT=/tmp PXF_HOME=/tmp/pxf make -C /tmp/pxf_src/automation TEST=HdfsSmokeTest || true && \
     mkdir -p /tmp/output/.tomcat && mkdir -p /tmp/automation && \
     mv /tmp/pxf_src/pxf_commit_sha /tmp/output/pxf_commit_sha && \
     mv /tmp/pxf_src/server/tomcat/build/apache-tomcat-*.tar.gz /tmp/output/.tomcat/ && \
