Certify Oracle Enterprise Linux 7 (#391)
- Docker: Add docker image to support OEL7
  Build a docker image using cloud build to certify support Oracle
  Enterprise Linux 7.
- Add a job to test PXF-GP6-HDP2 on OEL7
  This commit adds a job to test PXF running on Oracle Enterprise Linux 7
  with Greenplum 6.

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -17,6 +17,7 @@ groups:
   - Build PXF-GP[[gp_ver]] on RHEL7
   - Test PXF-GP[[gp_ver]]-HDP2 on RHEL7
 {% endfor %}
+  - Test PXF-GP6-HDP2 on OEL7
 {% if build_deb %}
 {% set gp_ver = 6 %}
   - Test PXF-GP[[gp_ver]]-HDP2 on Ubuntu18
@@ -63,6 +64,10 @@ groups:
   - Build PXF-GP[[gp_ver]] on RHEL7
   - Test PXF-GP[[gp_ver]]-HDP2 on RHEL7
 {% endfor %}
+- name: GP6 on OEL7
+  jobs:
+  - Build PXF-GP6 on RHEL7
+  - Test PXF-GP6-HDP2 on OEL7
 {% if build_deb %}
 {% set gp_ver = 6 %}
 - name: GP[[gp_ver]] on Ubuntu18
@@ -304,6 +309,15 @@ resources:
     username: _json_key
     password: ((pxf-cloudbuild-service-account-key))
 {% endfor %} {# gp5 and gp6 #}
+
+- name: gpdb6-pxf-dev-oel7-image
+  type: registry-image
+  icon: docker
+  source:
+    repository: gcr.io/data-gpdb-ud/gpdb-pxf-dev/gpdb6-oel7-test-pxf
+    tag: latest
+    username: _json_key
+    password: ((pxf-cloudbuild-service-account-key))
 
 {% set gp_ver = 6 %}
 {% if build_deb %}
@@ -556,6 +570,33 @@ jobs:
       TARGET_OS_VERSION: 7
 {% endfor %} {# gp_ver 5 and 6 #}
 
+- name: Test PXF-GP6-HDP2 on OEL7
+  plan:
+  - in_parallel:
+    - get: pxf_src
+      passed: [Build PXF-GP6 on RHEL7]
+      trigger: true
+    - get: pxf_tarball
+      resource: pxf_gp6_tarball_rhel7
+      passed: [Build PXF-GP6 on RHEL7]
+    - get: gpdb_package
+      resource: gpdb6_rhel7_rpm_latest-0
+      passed: [Build PXF-GP6 on RHEL7]
+    - get: gpdb6-pxf-dev-oel7-image
+    - get: pxf-automation-dependencies
+    - get: singlecluster
+      resource: singlecluster-hdp2
+  - task: Test PXF-GP6-HDP2 on OEL7
+    file: pxf_src/concourse/tasks/test.yml
+    image: gpdb6-pxf-dev-oel7-image
+    params:
+      ACCESS_KEY_ID: ((tf-machine-access-key-id))
+      GP_VER: 6
+      GROUP: gpdb,proxy,profile
+      SECRET_ACCESS_KEY: ((tf-machine-secret-access-key))
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
+
 ## ---------- Ubuntu 18 Swimlane ----------
 {% if build_deb %}
 {% set gp_ver = 6 %}
@@ -621,12 +662,12 @@ jobs:
 {% for gp_ver in range(5, 7) %}
       - Test PXF-GP[[gp_ver]]-HDP2 on RHEL7
 {% endfor %}
+      - Test PXF-GP6-HDP2 on OEL7
 {% set gp_ver = None %}
 {% set gp_ver = 6 %}
 {% if build_deb %}
       - Test PXF-GP[[gp_ver]]-HDP2 on Ubuntu18
 {% endif %}
-{% set gp_ver = None %}
 {% set gp_ver = 6 %}
 {% if build_deb %}
     - get: pxf_gp[[gp_ver]]_tarball_ubuntu18
@@ -636,11 +677,12 @@ jobs:
     - get: pxf_gp[[gp_ver]]_tarball_rhel6
       passed:
       - Test PXF-GP[[gp_ver]]-HDP2 on RHEL6
-{% set gp_ver = None %}
-{% for gp_ver in range(5, 7) %}
-    - get: pxf_gp[[gp_ver]]_tarball_rhel7
-      passed: [Test PXF-GP[[gp_ver]]-HDP2 on RHEL7]
-{% endfor %}
+    - get: pxf_gp5_tarball_rhel7
+      passed: [Test PXF-GP5-HDP2 on RHEL7]
+    - get: pxf_gp6_tarball_rhel7
+      passed:
+      - Test PXF-GP6-HDP2 on RHEL7
+      - Test PXF-GP6-HDP2 on OEL7
 {% set gp_ver = 5 %}
     - get: gpdb[[gp_ver]]_rhel6_rpm_latest-0
       passed: [Test PXF-GP[[gp_ver]]-HDP2 on RHEL6]
@@ -650,10 +692,12 @@ jobs:
       passed: [Test PXF-GP[[gp_ver]]-HDP2 on Ubuntu18]
 {% endif %}
 {% set gp_ver = None %}
-{% for gp_ver in range(5, 7) %}
-    - get: gpdb[[gp_ver]]_rhel7_rpm_latest-0
-      passed: [Test PXF-GP[[gp_ver]]-HDP2 on RHEL7]
-{% endfor %}
+    - get: gpdb5_rhel7_rpm_latest-0
+      passed: [Test PXF-GP5-HDP2 on RHEL7]
+    - get: gpdb6_rhel7_rpm_latest-0
+      passed:
+      - Test PXF-GP6-HDP2 on RHEL7
+      - Test PXF-GP6-HDP2 on OEL7
 
 ## ---------- Extended Tests ----------
 {% set gp_ver = 6 %}
