--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -172,6 +172,17 @@ resources:
     password: ((pxf-cloudbuild-service-account-key))
 {% endfor %} {# gp5 and gp6 #}
 
+{% if oel7 %}
+- name: gpdb6-pxf-dev-oel7-image
+  type: registry-image
+  icon: docker
+  source:
+    repository: gcr.io/data-gpdb-ud/gpdb-pxf-dev/gpdb6-oel7-test-pxf
+    tag: latest
+    username: _json_key
+    password: ((pxf-cloudbuild-service-account-key))
+{% endif %}
+
 {% set gp_ver = 6 %}
 {% if build_deb %}
 - name: gpdb[[gp_ver]]-pxf-dev-ubuntu18-image
@@ -415,6 +426,38 @@ jobs:
     <<: *slack_alert
 {% endif %}
 {% endfor %}
+
+{% if oel7 %}
+- name: Test PXF-GP6-HDP2 on OEL7
+  plan:
+  - in_parallel:
+    - get: pxf_src
+      passed: [Build PXF-GP6 on RHEL7]
+      trigger: true
+    - get: pxf_tarball
+      resource: pxf_gp6_tarball_rhel7
+      passed: [Build PXF-GP6 on RHEL7]
+    - get: gpdb_package
+      resource: gpdb6_rhel7_rpm_latest-0
+      passed: [Build PXF-GP6 on RHEL7]
+    - get: gpdb6-pxf-dev-oel7-image
+    - get: pxf-automation-dependencies
+    - get: singlecluster
+      resource: singlecluster-hdp2
+  - task: Test PXF-GP6-HDP2 on OEL7
+    file: pxf_src/concourse/tasks/test.yml
+    image: gpdb6-pxf-dev-oel7-image
+    params:
+      ACCESS_KEY_ID: ((tf-machine-access-key-id))
+      GP_VER: 6
+      GROUP: gpdb,proxy,profile
+      SECRET_ACCESS_KEY: ((tf-machine-secret-access-key))
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
+{% if slack_notification %}
+    <<: *slack_alert
+{% endif %}
+{% endif %}
 
 ## ---------- Ubuntu 18 Swimlane ----------
 {% if build_deb %}
