--- a/concourse/Makefile
+++ b/concourse/Makefile
@@ -31,6 +31,7 @@ S3                          ?= false
 ADL                         ?= false
 GS                          ?= false
 MINIO                       ?= false
+OEL7                        ?= false
 
 .PHONY: build certification dev pr
 build: set-build-pipeline
@@ -84,6 +85,7 @@ set-dev-build-pipeline:
 		adl=$(ADL) \
 		gs=$(GS) \
 		minio=$(MINIO) \
+		oel7=$(OEL7) \
 		dev_pipeline=true \
 		user=$(USER) \
 		branch=$(BRANCH) \
