Prefix tag names with `release-` [skip ci]
This allows being more selective on which tags to create releases on.
For example tags like docs-1.2.3 will not trigger a release.

Authored-by: Oliver Albertini <oalbertini@vmware.com>

--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -2,7 +2,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - '*' # match on any tag
+      - 'release-*' # match on release tags
 
 name: Create Release
 
