--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,10 +22,15 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 5.13.0 (06/10/2020)
+            ## 5.14.0 (06/30/2020)
 
             ### Enhancements:
 
-            - [#341](https://github.com/greenplum-db/pxf/pull/341) Create external-table directory and PXF RPM
+            - [#389](https://github.com/greenplum-db/pxf/pull/389) Avro: add compression
+            - [#391](https://github.com/greenplum-db/pxf/pull/391) Certify Oracle Enterprise Linux 7
+
+            ### Bug Fixes:
+
+            - [#383](https://github.com/greenplum-db/pxf/pull/383) Avro: support writing SMALLINT to Avro
           draft: false
           prerelease: false
