Add missing dependency for Hive profile when accessing CSV files (#382)
To reproduce this issue:

In Hive:

```
CREATE EXTERNAL TABLE hive_csv_table(
`timestamp` string COMMENT 'from deserializer',
`hitstime` string COMMENT 'from deserializer',
`hostname` string COMMENT 'from deserializer',
`productsku` string COMMENT 'from deserializer',
`country` string COMMENT 'from deserializer',
`flow_id` string COMMENT 'from deserializer',
`request_id` string COMMENT 'from deserializer')
PARTITIONED BY (
`year` int,
`month` int,
`day` int)
ROW FORMAT SERDE
'org.apache.hadoop.hive.serde2.OpenCSVSerde'
WITH SERDEPROPERTIES (
'quoteChar'='\"',
'separatorChar'=',')
STORED AS INPUTFORMAT
'org.apache.hadoop.mapred.TextInputFormat'
OUTPUTFORMAT
'org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat';

insert into hive_csv_table partition(year=2020, month=6, day=15)
values ('2423423', '5', 'foo.com', 'abc', 'ec', '123', '123');
```

In Greenplum:

```
create external table ext_hive_svc_table
(
timestamp text,
hitstime text,
hostname text,
productsku text,
country text,
flow_id text,
request_id text,
year integer,
month integer,
day integer
)
location ('pxf://hive_csv_table?PROFILE=Hive&SERVER=default-hdfs')
format 'custom' (formatter = 'pxfwritable_import');
```

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -244,6 +244,12 @@ project('pxf-hive') {
          * Transitive dependencies for hive-exec-core until here
          * */
 
+        /*
+         * Transitive dependency required for reading Hive tables with
+         * SerDe 'org.apache.hadoop.hive.serde2.OpenCSVSerde'
+         */
+        bundleJars "net.sf.opencsv:opencsv:2.3"
+
         /* Transitive dependency required by MapR */
         bundleJars "org.json:json:20090211"
     }
