--- a/server/build.gradle
+++ b/server/build.gradle
@@ -197,6 +197,8 @@ project('pxf-hdfs') {
         // Dependency in hadoop 2.9.2
         bundleJars "com.fasterxml.woodstox:woodstox-core:5.0.3"
         bundleJars "org.codehaus.woodstox:stax2-api:3.1.4"
+        bundleJars "org.apache.commons:commons-compress:1.20"
+        bundleJars "org.tukaani:xz:1.8"
     }
 }
 
