Fix the PXF performance pipelines (#414)
The performance pipelines have not been updated to use the PXF RPM build
and install process. We are currently working on Parquet performance
improvements during write and ideally we'd like to use the perf pipeline
to help debug issues. This commit updates the perf pipeline to use the
PXF RPM build and install process. It also provides make integration to
deploy perf pipelines. Some cleanup is performed
Allow specifying the perf pipeline name
Disable gphdfs test as gpdb6+ does not support gphdfs

--- a/concourse/Makefile
+++ b/concourse/Makefile
@@ -10,6 +10,7 @@ DEV_BUILD_PIPELINE_NAME     ?= dev:$(USER)-$(BRANCH)
 PR_BUILD_PIPELINE_NAME      ?= pxf_pr_pipeline
 BUILD_DEB                   ?= false
 CERTIFICATION_PIPELINE_NAME ?= pxf-certification
+PERF_PIPELINE_NAME          ?= pxf_perf-$(SCALE)g
 PIVNET_PIPELINE_NAME        ?= pivnet_artifacts
 NUM_GPDB5_VERSIONS          ?= 10
 NUM_GPDB6_VERSIONS          ?=  9
@@ -171,6 +172,24 @@ set-pivnet-pipeline:
 
 	@echo using the following command to unpause the pipeline:
 	@echo -e "\t$(FLY_CMD) -t ${CONCOURSE} unpause-pipeline --pipeline ${PIVNET_PIPELINE_NAME}"
+
+.PHONY: perf
+perf:
+	@if [ -z '$(SCALE)' ]; then \
+		echo 'Specify the SCALE for the test (i.e make SCALE=10 perf). Allowed SCALE values are 10, 50, 500'; \
+		exit 1; \
+	fi
+	$(FLY_CMD) --target=$(CONCOURSE) \
+		set-pipeline \
+		--check-creds \
+		--config $(HOME)/workspace/pxf/concourse/pipelines/perf_pipeline.yml \
+		--load-vars-from=$(SECRETS_FILE) \
+		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/gpdb_common-ci-secrets.yml \
+		--load-vars-from=$(HOME)/workspace/gp-continuous-integration/secrets/ccp_ci_secrets_ud.yml \
+		--load-vars-from=$(HOME)/workspace/pxf/concourse/settings/perf-settings-$(SCALE)g.yml \
+		--var pxf-git-branch=$(BRANCH) \
+		--pipeline $(PERF_PIPELINE_NAME) \
+		${FLY_OPTION_NON-INTERACTIVE}
 
 ## ----------------------------------------------------------------------
 ## List explicit rules
