build pipeline last step to process OSL files and send email (#424)
* added generate releng email task

* updated execution mode

* adjusted message

* remove path from artifacts

* adjusted text

* update get PXF artifacts job

* fix script

* parameterized RelEng drop points

* remove obsolete line

* print out email

* added extra line

* updated build pipeline template for OSL/ODP processing and email sending

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -185,6 +185,11 @@ resource_types:
   source:
     repository: frodenas/gcs-resource
 
+- name: email
+  type: docker-image
+  source:
+    repository: pcfseceng/email-resource
+
 {% if slack_notification %}
 - name: slack-notification
   type: docker-image
@@ -214,6 +219,7 @@ resources:
     json_key: ((pxf-storage-service-account-key))
     versioned_file: automation-dependencies/pxf-automation-dependencies.tar.gz
 
+## ---------- Single Cluster tarballs ----------
 - name: singlecluster-hdp2
   type: gcs
   icon: google-drive
@@ -258,39 +264,74 @@ resources:
     private_key: ((ccp-git-key))
     uri: ((ccp-git-remote))
 
+## ---------- RelEng Drop Artifacts ----------
 - name: pxf_gp5_rhel6_release_to_releng
   type: s3
   source:
     access_key_id: ((bucket-access-key-id))
-    bucket: gpdb-stable-concourse-builds
+    bucket: ((pxf-releng-gp5-drop-bucket))
     region_name: ((aws-region))
     secret_access_key: ((bucket-secret-access-key))
-    regexp: components/pxf/pxf-gp5-(.*)-1.el6.x86_64.rpm
+    regexp: ((pxf-releng-gp5-drop-path))/pxf-gp5-(.*)-1.el6.x86_64.rpm
 
 - name: pxf_gp5_rhel7_release_to_releng
   type: s3
   source:
     access_key_id: ((bucket-access-key-id))
-    bucket: gpdb-stable-concourse-builds
+    bucket: ((pxf-releng-gp5-drop-bucket))
     region_name: ((aws-region))
     secret_access_key: ((bucket-secret-access-key))
-    regexp: components/pxf/pxf-gp5-(.*)-1.el7.x86_64.rpm
+    regexp: ((pxf-releng-gp5-drop-path))/pxf-gp5-(.*)-1.el7.x86_64.rpm
 
 - name: pxf_gp6_rhel7_release_to_releng
   type: gcs
   source:
-    bucket: pivotal-gpdb-concourse-resources-prod
+    bucket: ((pxf-releng-gp6-drop-bucket))
     json_key: ((concourse-gcs-resources-service-account-key))
-    regexp: pxf/published/gpdb6/pxf-gp6-(.*)-1.el7.x86_64.rpm
+    regexp: ((pxf-releng-gp6-drop-path))/pxf-gp6-(.*)-1.el7.x86_64.rpm
 
 {% if build_deb %}
 - name: pxf_gp6_ubuntu18_release_to_releng
   type: gcs
   source:
-    bucket: pivotal-gpdb-concourse-resources-prod
+    bucket: ((pxf-releng-gp6-drop-bucket))
     json_key: ((concourse-gcs-resources-service-account-key))
-    regexp: pxf/published/gpdb6/pxf-gp6-(.*)-ubuntu18.04-amd64.deb
+    regexp: ((pxf-releng-gp6-drop-path))/pxf-gp6-(.*)-ubuntu18.04-amd64.deb
 {% endif %}
+
+- name: pxf_osl_to_releng
+  type: gcs
+  source:
+    bucket: ((pxf-releng-osl-drop-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: ((pxf-releng-osl-drop-path))/((pxf-osl-file-prefix))_(.*)_GA.txt
+
+- name: pxf_odp_to_releng
+  type: gcs
+  source:
+    bucket: ((pxf-releng-odp-drop-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: ((pxf-releng-odp-drop-path))/((pxf-odp-file-prefix))-(.*)-ODP.tar.gz
+
+## ---------- PXF ShitIt resources ----------
+- name: pxf_shipit_file
+  type: gcs
+  icon: google-drive
+  source:
+    bucket: data-gpdb-ud-pxf-releases
+    json_key: ((pxf-storage-service-account-key))
+    regexp: dev/shipit/greenplum-pxf-(.*).txt
+
+- name: send-an-email
+  type: email
+  source:
+    smtp:
+      host: ((pxf-smtp-host))
+      port: ((pxf-smpt-port)) # this must be a string
+      username: ((pxf-smtp-username))
+      password: ((pxf-smtp-password))
+    from: ((pxf-email-sender))
+
 
 ## ---------- Docker Images ----------
 {% set gp_ver = 5 %}
@@ -1505,16 +1546,32 @@ jobs:
     - get: pxf_src
       passed:
       - Promote PXF-GP5 and PXF-GP6 Artifacts
-    - get: pxf_open_source_license_file
+    - get: pxf_shipit_file
       trigger: true
     - get: google-cloud-sdk-slim-image
   - task: Get PXF-GP5 and PXF-GP6 Artifacts from Releases Directory
     image: google-cloud-sdk-slim-image
     file: pxf_src/concourse/tasks/get_pxf_release_artifacts.yml
     params:
+      GCS_ODP_PATH: prod/ODP
+      GCS_OSL_PATH: prod/OSL
       GCS_RELEASES_BUCKET: data-gpdb-ud-pxf-releases
       GCS_RELEASES_PATH: prod/releases
       GOOGLE_CREDENTIALS: ((pxf-storage-service-account-key))
+  - task: Generate Releng Email
+    image: google-cloud-sdk-slim-image
+    file: pxf_src/concourse/tasks/generate_releng_email.yml
+    params:
+      ATC_EXTERNAL_URL: ${ATC_EXTERNAL_URL}
+      BUILD_PIPELINE_NAME: ${BUILD_PIPELINE_NAME}
+      BUILD_JOB_NAME: ${BUILD_JOB_NAME}
+      BUILD_NAME: ${BUILD_NAME}
+      PXF_OSL_FILE_PREFIX: ((pxf-osl-file-prefix))
+      PXF_ODP_FILE_PREFIX: ((pxf-odp-file-prefix))
+      RELENG_GP5_DROP_URL: ((pxf-releng-gp5-drop-cloud))://((pxf-releng-gp5-drop-bucket))/((pxf-releng-gp5-drop-path))
+      RELENG_GP6_DROP_URL: ((pxf-releng-gp6-drop-cloud))://((pxf-releng-gp6-drop-bucket))/((pxf-releng-gp6-drop-path))
+      RELENG_OSL_DROP_URL: gs://((pxf-releng-osl-drop-bucket))/((pxf-releng-osl-drop-path))
+      RELENG_ODP_DROP_URL: gs://((pxf-releng-odp-drop-bucket))/((pxf-releng-odp-drop-path))
   - in_parallel:
     - put: pxf_gp5_rhel6_release_to_releng
       params:
@@ -1530,3 +1587,16 @@ jobs:
       params:
         file: pxf_artifacts/pxf-gp6-*ubuntu18*deb
 {% endif %}
+    - put: pxf_odp_to_releng
+      params:
+        file: pxf_artifacts/((pxf-odp-file-prefix))*.tar.gz
+    - put: pxf_osl_to_releng
+      params:
+        file: pxf_artifacts/((pxf-osl-file-prefix))*.txt
+  - put: send-an-email
+    params:
+      subject: pxf_artifacts/email_subject.txt
+      body: pxf_artifacts/email_body.txt
+      attachment_globs: [pxf_artifacts/((pxf-osl-file-prefix))*.txt]
+      to_text: "((pxf-releng-email)),((pxf-ud-email))"
+
